Fix the alignment

--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -178,6 +178,10 @@ p {
   margin-top: 25px;
 }
 
+.contact h2, .donate h2, .development-info h2 {
+  text-align: left;
+}
+
 .contact p, .donate p, .development-info p {
   margin-top: 5px;
   margin-bottom: 5px;
